Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -194,8 +194,7 @@ By scoring each of these factors, you can prioritize which threats are the most 
 |         | **Reproducibility**             | How easy is it to repeat the attack?                                                                    | Easily repeated = higher score.                                                                      |
 |         | **Exploitability**              | How easy is it to exploit?                                                                              | Less effort = higher threat.                                                                         |
 |         | **Affected Users**             | How many users will be impacted?                                                                        | More affected users = higher severity.                                                               |
-|         | **Discoverability**            | How easy is it to find the vulnerability?                                                               | Easily found = higher priority.                                                                      |
-|         |                                | **Use Case:** Helps prioritize threats by scoring each factor.                                          |                                                                        
+|         | **Discoverability**            | How easy is it to find the vulnerability?                                                               | Easily found = higher priority.                                                                                                              
 | **PASTA** | **1. Define Objectives**           | Identify business goals and security requirements.                                                      | Understand what needs protection.                                                                    |
 |         | **2. Define Technical Scope**     | List systems, devices, apps, data involved.                                                             | Map the full environment.                                                                            |
 |         | **3. Application Decomposition** | Break down the system into components and data flows.                                                   | Identify who interacts with what.                                                                    |
